added last visited section

--- a/fe-interview/src/app/app.component.html
+++ b/fe-interview/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="app-layout">
     <app-sidebar></app-sidebar>
-    <app-content></app-content>
+    <div>
+        <app-content></app-content>
+        <app-visits></app-visits>
+    </div>
 </div>
