--- a/fe-interview/src/app/pages/home/home.component.scss
+++ b/fe-interview/src/app/pages/home/home.component.scss
@@ -4,8 +4,8 @@
 
 
 .home-div {
-	width: $homePageSize;
-	height: $homePageSize;
+	width: $pageWidth;
+	height: $pageHeight;
 	margin-left: 100px;
 }
 
