--- a/fe-interview/src/app/pages/pages.scss
+++ b/fe-interview/src/app/pages/pages.scss
@@ -2,8 +2,9 @@
 @import "@app/mixins";
 
 $paddingSize : 10px;
-$homePageSize: 1000px;
-$imageSize: 200px;
+$pageWidth:1500px;
+$pageHeight: 600px;
+$imageSize: 300px;
 
 
 .app-home {
