--- a/fe-interview/src/app/pages/movies/movies.component.html
+++ b/fe-interview/src/app/pages/movies/movies.component.html
@@ -1,9 +1,35 @@
 <h1 class="app-home__title">Movies</h1>
-<div *ngrxLet="viewModel$ as viewModel">
-    <div class="movies-div" *ngrxLet="viewModel$ as viewModel">
-		@for(movie of viewModel; track movie) {			
-			<a [href]=getMovieUrl(movie)>
-				<img class="image-size" src={{movie.image.url}} alt={{movie.slug}}>
-		</a>	
+
+
+<div  *ngrxLet="viewModel$ as viewModel">
+	<form [formGroup]="form">
+		<div class="filter-control">
+			<div class="row search-box">
+				<div class="input-group rounded">
+					<input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+						aria-describedby="search-addon" formControlName="searchText" />
+					<span class="input-group-text border-0" id="search-addon">
+						<i class="fas fa-search"></i>
+					</span>
+				</div>
+			</div>
+			<div>
+				<mat-form-field>
+					<mat-label>Movie Genres</mat-label>
+					<mat-select formControlName="genres" multiple>
+						@for (genre of genresList; track genre) {
+						<mat-option [value]="genre">{{genre}}</mat-option>
+						}
+					</mat-select>
+				</mat-form-field>
+			</div>
+		</div>
+	</form>
+	<div class="movies-div" *ngIf="viewModel.length>1">
+		@for(movie of viewModel; track movie) {
+		<a [routerLink]=getMovieUrl(movie)>
+			<img class="image-size" src={{movie.image.url}} alt={{movie.slug}}>
+		</a>
 		}
+	</div>
 </div>
