updated logic for filter by genre and searchTerm

--- a/fe-interview/src/app/pages/movie/movie.component.html
+++ b/fe-interview/src/app/pages/movie/movie.component.html
@@ -6,7 +6,7 @@
         <tr>Title: {{movie.title}}</tr>
         <tr>Generes: {{movie.genres}}</tr>
         <tr>Popularity: {{movie.popularity}}</tr>
-        <tr>Budget: {{movie.budget}}</tr>
+        <tr>Budget: {{movie.budget | currency:'EUR'}}</tr>
         </td>
         </tr>
     </table>
