--- a/fe-interview/src/app/shared/visits/visits.component.scss
+++ b/fe-interview/src/app/shared/visits/visits.component.scss
@@ -2,3 +2,14 @@
     padding-top: 20px;
     padding-left: 500px;
 }
+
+.movie-image {
+    width: 80px;
+    height: 80px;
+    padding-left: 200px;
+}
+
+span {
+    font-size: large;
+    padding-left: 10px;
+}
