--- a/fe-interview/src/app/shared/visits/visits.component.scss
+++ b/fe-interview/src/app/shared/visits/visits.component.scss
@@ -1,12 +1,18 @@
 .visited-movies {
-    padding-top: 20px;
+    display: flex;
+    padding-top: 7%;
     padding-left: 500px;
+}
+
+.visited-movies-list {
+    width: 500px;
+    height: 500px;
 }
 
 .movie-image {
     width: 80px;
     height: 80px;
-    padding-left: 200px;
+    padding: 10px;
 }
 
 span {
