refactor movie component code

--- a/fe-interview/src/app/pages/home/home.component.html
+++ b/fe-interview/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 
-<div class="home-div" *ngrxLet="viewModel$ as viewModel">
+<div class="home-div" *ngrxLet="viewModel$ as movies">
 	<h1 class="title">Top 10 movies of all time</h1>
-		@for(movie of viewModel; track movie) {			
+		@for(movie of movies; track movie) {			
 			<a [routerLink]=getMovieUrl(movie)>
 				<img class="image-size" src={{movie.image.url}} alt={{movie.slug}}>
 		</a>	
