--- a/fe-interview/src/app/pages/movie/movie.component.scss
+++ b/fe-interview/src/app/pages/movie/movie.component.scss
@@ -1,4 +1,22 @@
+.movie-table {
+    padding-top: 50px;
+    padding-left: 500px;
+}
+
 .movie-info {
-        font-size: large;
-            padding-left: 10px;
+    .key {
+        text-align: left;
+        font-size: larger;
+        font-weight: 500;
+    }
+
+    .value {
+        text-align: left;
+        font-size: larger;
+        font-weight: 400;
+        padding-left: 15px;
+    }
+
+    font-size: large;
+    padding-left: 10px;
 }
