--- a/fe-interview/src/app/pages/movie/movie.component.html
+++ b/fe-interview/src/app/pages/movie/movie.component.html
@@ -1,13 +1,27 @@
-<div *ngIf="movie !== undefined">
-    <table>
-        <tr>
-            <td><img class="image-size" src={{movie.image.url}}></td>
-            <td class="movie-info">
-        <tr>Title: {{movie.title}}</tr>
-        <tr>Generes: {{movie.genres}}</tr>
-        <tr>Popularity: {{movie.popularity | number: '1.2-2'}}</tr>
-        <tr>Budget: {{movie.budget | currency:'EUR'}}</tr>
-        </td>
-        </tr>
-    </table>
+<div *ngrxLet="viewModel$ as movie">
+    <div class="movie-table" *ngIf="movie !== undefined">
+        <table>
+            <tr>
+                <td><img class="image-size" src={{movie.image.url}}></td>
+                <td class="movie-info">
+            <tr>
+                <td class="key">Title:</td>
+                <td class="value">{{movie.title}}</td>
+            </tr>
+            <tr>
+                <td class="key">Generes:</td>
+                <td class="value">{{movie.genres}}</td>
+            </tr>
+            <tr>
+                <td class="key">Popularity:</td>
+                <td class="value">{{movie.popularity | number: '1.2-2'}}</td>
+            </tr>
+            <tr>
+                <td class="key">Budget:</td>
+                <td class="value">{{movie.budget | currency:'EUR'}}</td>
+            </tr>
+            </td>
+            </tr>
+        </table>
+    </div>
 </div>
