--- a/fe-interview/src/app/pages/movies/movies.component.html
+++ b/fe-interview/src/app/pages/movies/movies.component.html
@@ -1,6 +1,6 @@
 <h1 class="title">Movies</h1>
 
-<div class="movies" *ngrxLet="viewModel$ as viewModel">
+<div class="movies" *ngrxLet="viewModel$ as movies">
 	<div class="form-section">
 		<form [formGroup]="form">
 			<div>
@@ -25,8 +25,8 @@
 			</div>
 		</form>
 	</div>
-	<div class="movies-section" *ngIf="viewModel.length>1">
-		@for(movie of viewModel; track movie) {
+	<div class="movies-section" *ngIf="movies.length>1">
+		@for(movie of movies; track movie) {
 		<a [routerLink]=getMovieUrl(movie)>
 			<img class="image-size" src={{movie.image.url}} alt={{movie.slug}}>
 		</a>
