--- a/fe-interview/src/app/shared/visits/visits.component.scss
+++ b/fe-interview/src/app/shared/visits/visits.component.scss
@@ -1,3 +1,9 @@
+.title {
+    padding-top: 20px;
+    padding-left: 100px;
+    padding-right: 20px;
+}
+
 .visited-movies {
     display: flex;
     padding-top: 7%;
