modified css for better look

--- a/fe-interview/src/app/app.component.html
+++ b/fe-interview/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="app-layout">
-    <app-sidebar></app-sidebar>
-    <div>
+
+    <div class="border-end bg-white" id="sidebar-wrapper">
+        <app-sidebar></app-sidebar>
+    </div>
+
+
+    <div id="page-content-wrapper">
         <app-content></app-content>
         <app-visits></app-visits>
     </div>
