--- a/fe-interview/src/app/shared/sidebar/sidebar.component.html
+++ b/fe-interview/src/app/shared/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<nav class="nav flex-column">
-    <a class="nav-link" href="#" [routerLink]="['/']">Home</a>
-    <a class="nav-link" href="#" [routerLink]="['/movies']">Movies</a>
-  </nav>
+<div class="list-group list-group-flush">
+  <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#" [routerLink]="['/']">Home</a>
+  <a class="list-group-item list-group-item-action list-group-item-light p-3"  [routerLink]="['/movies']">Movies</a>
+</div>
