--- a/fe-interview/src/app/pages/home/home.component.scss
+++ b/fe-interview/src/app/pages/home/home.component.scss
@@ -1,13 +1,8 @@
 
 @import "../pages.scss";
 
-.title {
-	padding-top: 20px;
-	padding-left: 100px;
-}
-
 .home-div {
-	width: $pageWidth;
+	width: $pageWidth+50px;
 	height: $pageHeight;
 	margin-left: 100px;
 }
