show error message on no movie load and css corrections

--- a/fe-interview/src/app/pages/home/home.component.scss
+++ b/fe-interview/src/app/pages/home/home.component.scss
@@ -2,8 +2,8 @@
 @import "../pages.scss";
 
 .home-div {
-	width: $pageWidth+50px;
-	height: $pageHeight;
+	width: $pageWidth;
+	height: $pageHeight -200px;
 	margin-left: 100px;
 }
 
