--- a/fe-interview/src/app/pages/movie/movie.component.scss
+++ b/fe-interview/src/app/pages/movie/movie.component.scss
@@ -1,6 +1,6 @@
 .movie-table {
-    padding-top: 50px;
-    padding-left: 500px;
+    margin-top: 50px;
+    margin-left: 500px;
 }
 
 .movie-info {
@@ -14,9 +14,9 @@
         text-align: left;
         font-size: larger;
         font-weight: 400;
-        padding-left: 15px;
+        margin-left: 15px;
     }
 
     font-size: large;
-    padding-left: 10px;
+    margin-left: 10px;
 }
