--- a/fe-interview/src/app/shared/visits/visits.component.html
+++ b/fe-interview/src/app/shared/visits/visits.component.html
@@ -1,3 +1,10 @@
+<div class="container-fluid" *ngrxLet="errorMessage$ as errorMessage">
+    @if(errorMessage)
+    {
+    <div class="alert alert-danger text-center" role="alert">{{errorMessage}}</div>
+    }
+</div>
+
 <div *ngrxLet="viewModel$ as visitedMovies">
     <div class="visited-movies" *ngIf="visitedMovies !== undefined && visitedMovies.length>0">
         <div>
